[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "gradio>=5.16.0",
    "openai>=1.63.0",
    "uvicorn>=0.34.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]
